--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.section {
+  height: 100vh;
+  padding: 30px;
+}
+
+.container {
+  max-width: 700px;
+}
