--- a/src/app/pages/observable-user-list-page/observable-user-list-page.component.html
+++ b/src/app/pages/observable-user-list-page/observable-user-list-page.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <h2>Users</h2>
+    <h2>Users with observable</h2>
     <a routerLink="/users/new" class="btn btn-primary">New User</a>
   </div>
 
