--- a/src/app/pages/signal-user-list-page/signal-user-list-page.component.html
+++ b/src/app/pages/signal-user-list-page/signal-user-list-page.component.html
@@ -1,16 +1,8 @@
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <h2>Users</h2>
+    <h2>Users with signals</h2>
     <a routerLink="/users/new" class="btn btn-primary">New User</a>
   </div>
 
-  <ng-container *ngIf="userResponse().success; else noUsers">
-    <app-signal-user-list [users]="userResponse().users"></app-signal-user-list>
-  </ng-container>
-
-  <ng-template #noUsers>
-    <div class="alert alert-warning" role="alert">
-      {{ userResponse().message }}
-    </div>
-  </ng-template>
+  <app-signal-user-list [users]="managedUsers()"></app-signal-user-list>
 </div>
