--- a/src/app/pages/observable-user-list-page/observable-user-list-page.component.html
+++ b/src/app/pages/observable-user-list-page/observable-user-list-page.component.html
@@ -9,11 +9,7 @@
   </div>
 
   <ng-container *ngIf="users$ | async as users">
-    <ng-container>
-      <app-observable-user-list
-        [users]="users.users"
-      ></app-observable-user-list>
-    </ng-container>
+    <app-observable-user-list [users]="users.users"></app-observable-user-list>
   </ng-container>
 
   <div class="row" *ngIf="errorMessage">
