--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,11 +1,15 @@
 <div class="container mt-5">
   <app-login-form (formSubmit)="handleLogin($event)"></app-login-form>
-  <div
-    *ngIf="errorMessage"
-    class="alert mt-4"
-    [ngClass]="{ 'alert-success': success, 'alert-danger': !success }"
-    role="alert"
-  >
-    {{ errorMessage }}
-  </div>
+  <ng-container *ngIf="loginAction$ | async as loginAction">
+    <div
+      class="alert mt-4"
+      [ngClass]="{
+        'alert-success': loginAction.success,
+        'alert-danger': !loginAction.success
+      }"
+      role="alert"
+    >
+      {{ loginAction.message }}
+    </div>
+  </ng-container>
 </div>
