--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -1,11 +1,15 @@
 <div class="container mt-5">
   <app-register-form (formSubmit)="handleRegister($event)"></app-register-form>
-  <div
-    *ngIf="errorMessage"
-    class="alert mt-4"
-    [ngClass]="{ 'alert-success': success, 'alert-danger': !success }"
-    role="alert"
-  >
-    {{ errorMessage }}
-  </div>
+  <ng-container *ngIf="registerAction$ | async as registerAction">
+    <div
+      class="alert mt-4"
+      [ngClass]="{
+        'alert-success': registerAction.success,
+        'alert-danger': !registerAction.success
+      }"
+      role="alert"
+    >
+      {{ registerAction.message }}
+    </div>
+  </ng-container>
 </div>
